tests/baselines/reference/argumentsSpreadRestIterables(target=es5).errors.txt
tests/cases/compiler/argumentsSpreadRestIterables.tsx(1,22): error TS2304: Cannot find name 'Iterable'.
tests/cases/compiler/argumentsSpreadRestIterables.tsx(8,21): error TS2461: Type '"hello"' is not an array type.
tests/cases/compiler/argumentsSpreadRestIterables.tsx(13,18): error TS2461: Type '"hello"' is not an array type.


==== tests/cases/compiler/argumentsSpreadRestIterables.tsx (3 errors) ====
    declare const itNum: Iterable<number>
                         ~~~~~~~~
!!! error TS2304: Cannot find name 'Iterable'.
    
    ;(function(...rest) {})(...itNum)
    ;(function(a, ...rest) {})('', ...itNum)
    ;(function(a, ...rest) {})('', true, ...itNum)
    
    declare function fn1<const T extends readonly unknown[]>(...args: T): T;
    const res1 = fn1(..."hello");
                        ~~~~~~~
!!! error TS2461: Type '"hello"' is not an array type.
    const res2 = fn1(...itNum);
    
    // repro from #52781
    declare function foo<T extends unknown[]>(...args: T): T;
    const p = foo(..."hello");
                     ~~~~~~~
!!! error TS2461: Type '"hello"' is not an array type.
    const p2 = foo(...itNum);
    